samples/_failures_safe/1761626209_d1ced9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b305b676.c: In function ‘main’:
./samples/SAFE/__tmp_b305b676.c:162:14: error: expected ‘)’ at end of input
  162 |     if (start
      |        ~     ^
      |              )
./samples/SAFE/__tmp_b305b676.c:162:5: error: expected declaration or statement at end of input
  162 |     if (start
      |     ^~
